<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000">

        <TextView
            android:id="@+id/rs_Text"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="right|bottom"
            android:textColor="#ffffff"
            android:textSize="60sp" />
    </LinearLayout>//

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center">

        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:background="#1b1919"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_7"
                    android:layout_width="90dp"
                    android:layout_height="72dp"
                    android:background="@drawable/num_button_selector"
                    android:text="@string/btn_7"
                    android:textColor="@android:color/background_light"
                    android:textSize="25sp" />//7

                <Button
                    android:id="@+id/btn_8"
                    android:layout_width="90dp"
                    android:layout_height="72dp"
                    android:background="@drawable/num_button_selector"
                    android:text="@string/btn_8"
                    android:textColor="@android:color/background_light"
                    android:textSize="25sp" />//8

                <Button
                    android:id="@+id/btn_9"
                    android:layout_width="90dp"
                    android:layout_height="72dp"
                    android:background="@drawable/num_button_selector"
                    android:text="@string/btn_9"
                    android:textColor="@android:color/background_light"
                    android:textSize="25sp" />//9
            </LinearLayout>
            //7~9

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_4"
                    android:layout_width="90dp"
                    android:layout_height="72dp"
                    android:background="@drawable/num_button_selector"
                    android:text="@string/btn_4"
                    android:textColor="@android:color/background_light"
                    android:textSize="25sp" />//4

                <Button
                    android:id="@+id/btn_5"
                    android:layout_width="90dp"
                    android:layout_height="72dp"
                    android:background="@drawable/num_button_selector"
                    android:text="@string/btn_5"
                    android:textColor="@android:color/background_light"
                    android:textSize="25sp" />//5

                <Button
                    android:id="@+id/btn_6"
                    android:layout_width="90dp"
                    android:layout_height="72dp"
                    android:background="@drawable/num_button_selector"
                    android:text="@string/btn_6"
                    android:textColor="@android:color/background_light"
                    android:textSize="25sp" />//6
            </LinearLayout>
            //4~6

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_1"
                    android:layout_width="90dp"
                    android:layout_height="72dp"
                    android:background="@drawable/num_button_selector"
                    android:text="@string/btn_1"
                    android:textColor="@android:color/background_light"
                    android:textSize="25sp" />//1

                <Button
                    android:id="@+id/btn_2"
                    android:layout_width="90dp"
                    android:layout_height="72dp"
                    android:background="@drawable/num_button_selector"
                    android:text="@string/btn_2"
                    android:textColor="@android:color/background_light"
                    android:textSize="25sp" />//2

                <Button
                    android:id="@+id/btn_3"
                    android:layout_width="90dp"
                    android:layout_height="72dp"
                    android:background="@drawable/num_button_selector"
                    android:text="@string/btn_3"
                    android:textColor="@android:color/background_light"
                    android:textSize="25sp" />//3
            </LinearLayout>
            //1~3

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_del"
                    android:layout_width="90dp"
                    android:layout_height="72dp"
                    android:background="@drawable/num_button_selector"
                    android:text="@string/btn_del"
                    android:textColor="@android:color/background_light"
                    android:textSize="25sp" />//删除

                <Button
                    android:id="@+id/btn_0"
                    android:layout_width="90dp"
                    android:layout_height="72dp"
                    android:background="@drawable/num_button_selector"
                    android:text="@string/btn_0"
                    android:textColor="@android:color/background_light"
                    android:textSize="25sp" />//0

                <Button
                    android:id="@+id/btn_p"
                    android:layout_width="90dp"
                    android:layout_height="72dp"
                    android:background="@drawable/num_button_selector"
                    android:text="@string/btn_p"
                    android:textColor="@android:color/background_light"
                    android:textSize="25sp" />//.

            </LinearLayout>
            //.,0,删除

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_clear"
                    android:layout_width="270dp"
                    android:layout_height="72dp"
                    android:background="@drawable/num_button_selector"
                    android:text="@string/btn_clear"
                    android:textColor="@android:color/background_light"
                    android:textSize="25sp" />//清零
            </LinearLayout>
            清零


        </LinearLayout>//数字键


        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:background="#8c8687"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_divide"
                android:layout_width="90dp"
                android:layout_height="72dp"
                android:background="@drawable/symbol_button_selector"
                android:text="@string/btn_divide"
                android:textColor="@android:color/background_light"
                android:textSize="25sp" />//除

            <Button
                android:id="@+id/btn_multiply"
                android:layout_width="90dp"
                android:layout_height="72dp"
                android:background="@drawable/symbol_button_selector"
                android:text="@string/btn_multiply"
                android:textColor="@android:color/background_light"
                android:textSize="25sp" />//乘

            <Button
                android:id="@+id/btn_minus"
                android:layout_width="90dp"
                android:layout_height="72dp"
                android:background="@drawable/symbol_button_selector"
                android:text="@string/btn_minus"
                android:textColor="@android:color/background_light"
                android:textSize="25sp" />//减

            <Button
                android:id="@+id/btn_plus"
                android:layout_width="90dp"
                android:layout_height="72dp"
                android:background="@drawable/symbol_button_selector"
                android:text="@string/btn_plus"
                android:textColor="@android:color/background_light"
                android:textSize="25sp" />//加

            <Button
                android:id="@+id/btn_equals"
                android:layout_width="90dp"
                android:layout_height="72dp"
                android:background="@drawable/equals_button_selector"
                android:text="@string/btn_equals"
                android:textColor="@android:color/background_light"
                android:textSize="25sp" />//等于
        </LinearLayout>//符号键

    </LinearLayout>//按键

</LinearLayout>
